--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	
 	<section class="cd-intro">
 		<h1 class="cd-headline clip is-full-width">
-			<span>I am </span>
+			<span>Hey,I am </span>
 			<span class="cd-words-wrapper">
-				<b class="is-visible">Jane Doe</b>
-				<b>an Enthusiastic Learner</b>
-				<b>a Passionate Programmer</b>
+				<b class="is-visible">Janhvi Pable!</b>
+				<b>Driven by passion</b>
+				<b>Fed by ambition ^_^ </b>
 			</span>
 		</h1>
 	</section> <!-- cd-intro -->
