--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 	
 	<section class="cd-intro">
 		<h1 class="cd-headline clip is-full-width">
-			<span>Hey,I am </span>
+			<span>I am </span>
 			<span class="cd-words-wrapper">
 				<b class="is-visible">Janhvi Pable!</b>
-				<b>Driven by passion</b>
-				<b>Fed by ambition ^_^ </b>
+				<b>an ambitious learner</b>
+				<b>coding enthusiast  </b>
+				<b>self driven ^_^ </b>
+				
 			</span>
 		</h1>
 	</section> <!-- cd-intro -->
